--- a/code/dev/less/page.less
+++ b/code/dev/less/page.less
@@ -141,3 +141,7 @@ table tbody tr td {
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+
+table tbody tr td.uppercase {
+  text-transform: uppercase;
+}
