--- a/code/css/styles.css
+++ b/code/css/styles.css
@@ -105,6 +105,9 @@ table tbody tr td {
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+table tbody tr td.uppercase {
+  text-transform: uppercase;
+}
 .main_img_container {
   left: 50%;
   position: absolute;
