--- a/code/dev/less/page.less
+++ b/code/dev/less/page.less
@@ -145,3 +145,16 @@ table tbody tr td {
 table tbody tr td.uppercase {
   text-transform: uppercase;
 }
+
+
+alert-list {
+  position: absolute;
+  z-index: 999;
+  left: 50%;
+
+  alert {
+    position: relative;
+    left: -50%;
+    min-width: 200px;
+  }
+}
