--- a/code/css/styles.css
+++ b/code/css/styles.css
@@ -202,10 +202,11 @@ alert-list alert {
 }
 section[drawer] {
   background-color: #2E2F2F;
+  z-index: 999;
 }
 section[drawer] #logo {
   background-color: #606363;
-  height: 50px;
+  height: 52px;
 }
 section[drawer] #logo img {
   margin: 8px 5px;
@@ -226,12 +227,18 @@ section[drawer] .side-menu .side-menu-item {
 section[drawer] .side-menu .side-menu-item.selected {
   background-color: #151515;
 }
+section[drawer] .side-menu .side-menu-item.active {
+  border-right: 2px solid #f7941e;
+}
 section[drawer] .side-menu .side-menu-item i {
   margin: 0 10px;
 }
 .navbar {
   margin: 0;
   border: none;
+}
+.navbar .navbar-inner li.active {
+  border-bottom: 2px solid #66b2bf;
 }
 .navbar .navbar-inner div[paper-drawer-toggle] {
   display: inline-block;
