--- a/code/dev/less/navbar.less
+++ b/code/dev/less/navbar.less
@@ -5,7 +5,9 @@
 
   .navbar-inner {
     //height: @app-top-menu-height;
-
+    li.active {
+        border-bottom: 2px solid @app-color-blue;
+    }
     div[paper-drawer-toggle] {
       display: inline-block;
       padding: 20px;
