Page height fix

--- a/code/dev/less/page.less
+++ b/code/dev/less/page.less
@@ -17,7 +17,6 @@ body {
 .page-inner {
   padding-top: 20px;
   //position: relative;
-  min-height: 1080px;
   background-color: @app-color-grey-200;
 }
 
@@ -31,6 +30,7 @@ body {
 
 section[main] {
   overflow: auto;
+  background-color: @app-color-grey-200;
 }
 
 .max-height-pre {
