--- a/code/css/styles.css
+++ b/code/css/styles.css
@@ -13,7 +13,6 @@ body {
 }
 .page-inner {
   padding-top: 20px;
-  min-height: 1080px;
   background-color: #eeeeee;
 }
 .layout {
@@ -24,6 +23,7 @@ body {
 }
 section[main] {
   overflow: auto;
+  background-color: #eeeeee;
 }
 .max-height-pre {
   max-height: 400px;
