--- a/code/dev/less/sidebar.less
+++ b/code/dev/less/sidebar.less
@@ -1,6 +1,10 @@
+#drawer {
+  z-index: 999;
+}
+
 section[drawer] {
   background-color: @app-side-menu-background;
-  z-index: 999;
+
   #logo {
     background-color: @app-side-menu-background-logo;
     height: @app-top-menu-height;
