--- a/code/dev/less/page.less
+++ b/code/dev/less/page.less
@@ -98,8 +98,15 @@ section[main] {
 }
 
 table {
+  table-layout: fixed !important;
+}
+
+table {
   th {
-    width: 150px;
+
+  }
+  th.thin{
+    width: 70px;
   }
   th.actions {
     width: 120px;
