--- a/code/dev/less/navbar.less
+++ b/code/dev/less/navbar.less
@@ -4,6 +4,11 @@
   border: none;
 
   .navbar-inner {
+
+    a.two-line {
+      line-height: 30px;
+    }
+
     //height: @app-top-menu-height;
     li.active {
         border-bottom: 2px solid @app-color-blue;
