--- a/code/dev/less/page.less
+++ b/code/dev/less/page.less
@@ -142,6 +142,9 @@ table {
 select.form-control.fixed {
   width: 150px;
 }
+select.form-control.fixed135 {
+  width: 135px;
+}
 
 .popover {
   z-index: 999;
