--- a/code/dev/less/page.less
+++ b/code/dev/less/page.less
@@ -19,7 +19,7 @@ body {
 }
 
 .page-inner {
-  padding-top: 20px;
+  //padding-top: 20px;
   //position: relative;
   background-color: @app-color-grey-200;
 }
