Add signup pages

--- a/code/dev/less/page.less
+++ b/code/dev/less/page.less
@@ -161,7 +161,10 @@ table tbody tr td {
 table tbody tr td.uppercase {
   text-transform: uppercase;
 }
-
+.billing-plan {
+  margin-right: 5px;
+  margin-bottom: 5px;
+}
 
 alert-list {
   position: absolute;
