--- a/code/dev/less/page.less
+++ b/code/dev/less/page.less
@@ -165,6 +165,10 @@ table tbody tr td.uppercase {
   margin-right: 5px;
   margin-bottom: 5px;
 }
+h1.signup {
+  margin-top: auto;
+  color: @app-color-grey-logo;
+}
 
 alert-list {
   position: absolute;
