--- a/code/dev/less/variables.less
+++ b/code/dev/less/variables.less
@@ -4,6 +4,7 @@
 
 //@app-color-grey: #4b4e53;
 @app-color-grey: #2E2F2F;
+@app-color-grey-logo: #A1A2A5;
 @app-color-grey-dark: #1E1E1E;
 @app-color-grey-50: #FAFAFA;
 @app-color-grey-100: #F5F5F5;
