--- a/code/dev/less/variables.less
+++ b/code/dev/less/variables.less
@@ -30,7 +30,7 @@
 
 @app-color-text-disabled: lighten(@app-color-grey, 50%);
 
-// Menues
+// Menus
 @app-top-menu-height: 52px;
 // Sidebar menu
 @app-side-menu-item-height: 60px;
