--- a/code/dev/less/page.less
+++ b/code/dev/less/page.less
@@ -138,12 +138,22 @@ table {
   }
 }
 
+.ui-select-multiple.ui-select-bootstrap, input.ui-select-search {
+  max-width: 550px;
+}
 
+select.form-control {
+  max-width: 550px;
+}
 select.form-control.fixed {
   width: 150px;
 }
 select.form-control.fixed135 {
   width: 135px;
+}
+
+input.form-control {
+  max-width: 550px;
 }
 
 .popover {
