--- a/code/dev/less/page.less
+++ b/code/dev/less/page.less
@@ -197,3 +197,8 @@ alert-list {
   border: none;
   background-color: transparent;
 }
+
+/* To hide "Powered by Ace" label in the JSON editor */
+a.poweredBy {
+  display: none;
+}
