--- a/code/dev/less/page.less
+++ b/code/dev/less/page.less
@@ -202,3 +202,11 @@ alert-list {
 a.poweredBy {
   display: none;
 }
+
+input[type="radio"]{
+  margin-left: 20px;
+}
+
+input[type="checkbox"]{
+  margin-left: 20px;
+}
