--- a/code/dev/less/sidebar.less
+++ b/code/dev/less/sidebar.less
@@ -25,7 +25,7 @@ section[drawer] {
       padding: 10px;
       font-size: 16px;
       color: @app-side-menu-text-color;
-      border-bottom: 1px solid lighten(@app-side-menu-background, 5%);
+      //border-bottom: 1px solid lighten(@app-side-menu-background, 5%);
       text-decoration: none;
 
       &.selected {
@@ -38,6 +38,47 @@ section[drawer] {
 
       i {
         margin: 0 10px;
+      }
+
+      &:after {
+        font-family: FontAwesome;
+        content: "\f0d8";
+        float: right;
+      }
+      &.hide-caret {
+        &:after {
+          content: "";
+        }
+      }
+    }
+
+    .side-menu-sub-item {
+      display: block;
+      border-bottom: 1px solid gray;
+      padding-bottom: 5px;
+      margin-bottom: 5px;
+      margin-right: 10px;
+      margin-left: 40px;
+      color: @app-side-menu-text-color;
+      text-decoration: none;
+
+      &.active {
+        color: white;
+      }
+    }
+
+    .side-menu-sub-item {
+      display: none;
+    }
+
+    .active-side-menu-item {
+      .side-menu-item {
+        &:after {
+          content: "\f0d7";
+        }
+      }
+      .side-menu-sub-item {
+        display: block;
       }
     }
   }
