--- a/code/dev/css/styles.css
+++ b/code/dev/css/styles.css
@@ -395,3 +395,43 @@ polyline {
 .invisible-chart-wrapper {
   min-height: 350px;
 }
+.filter-generator .form-control {
+  display: inline-block;
+  width: inherit;
+}
+.filter-generator .button-wrapper {
+  display: inline-block;
+}
+.filter-generator .date-picker {
+  display: inline-block;
+  width: 190px;
+}
+.filter-generator select {
+  margin: 0 10px;
+  margin-right: 5px;
+}
+.filter-generator .remove-active-filter {
+  cursor: pointer;
+  margin-right: 5px;
+}
+.filter-generator button {
+  margin-left: 10px;
+}
+.daterangepicker th {
+  width: 40px;
+}
+.fg-add-filter-menu {
+  display: inline-block;
+  background: #ffffff;
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+  padding: 5px;
+  position: fixed;
+  margin-left: 20px;
+}
+.fg-add-filter-menu .dd-element {
+  padding: 5px;
+  cursor: pointer;
+}
+.fg-add-filter-menu .dd-element:hover {
+  background: #f5f5f5;
+}
