general view, filter-gen handler, refactoring

--- a/code/dev/css/styles.css
+++ b/code/dev/css/styles.css
@@ -427,6 +427,7 @@ polyline {
   padding: 5px;
   position: fixed;
   margin-left: 20px;
+  z-index: 1;
 }
 .fg-add-filter-menu .dd-element {
   padding: 5px;
