Adding htmlhint checks

--- a/code/css/styles.css
+++ b/code/css/styles.css
@@ -105,6 +105,9 @@ table tbody .actions a {
 input.ui-select-search {
   max-width: 550px;
 }
+.select2-container {
+  min-width: 300px;
+}
 select.form-control {
   max-width: 550px;
 }
