--- a/code/dev/less/page.less
+++ b/code/dev/less/page.less
@@ -142,6 +142,10 @@ table {
   max-width: 550px;
 }
 
+.select2-container {
+  min-width: 300px;
+}
+
 select.form-control {
   max-width: 550px;
 }
