general view, filter updates, new design

--- a/code/dev/less/variables.less
+++ b/code/dev/less/variables.less
@@ -30,6 +30,22 @@
 
 @app-color-text-disabled: lighten(@app-color-grey, 50%);
 
+
+/*
+ *
+ * New design variables
+ *
+ */
+
+/*
+ *
+ * Block specific variables
+ *
+ */
+@border-nd-block-bg-color: #fff;
+@border-nd-block-color: @nd-light-gray;
+@border-nd-block: 1px solid @nd-light-gray;
+
 // Menus
 @app-top-menu-height: 52px;
 // Sidebar menu
