--- a/code/widgets/adf-widget-analytics-proxy-traffic/src/views/view-requests-chart.tpl.html
+++ b/code/widgets/adf-widget-analytics-proxy-traffic/src/views/view-requests-chart.tpl.html
@@ -1,4 +1,9 @@
-<div class="col-lg-12">
+<div class="col-lg-12 view-requests-chart">
   <h4>{{config.domain.domain_name}}</h4>
-  <div requests-chart fl-os="config.os.labels" fl-device="config.device.labels" fl-country="config.countries" ng-domain="config.domain"></div>
+  <div class="row">
+    <div class="col-md-12 view-requests-chart_filter_settings">
+
+    </div>
+  </div>
+  <div requests-chart filters="config.filters" fl-os="config.os.labels" fl-device="config.device.labels" fl-country="config.countries" ng-domain="config.domain"></div>
 </div>
