general view, filter logic, services, charts updates

--- a/code/dev/less/shared/filter-generator.less
+++ b/code/dev/less/shared/filter-generator.less
@@ -13,7 +13,8 @@
     }
 
     select {
-    	margin: 0 10px;
+        max-width: 300px;
+    	margin: 10px;
     	margin-right: 5px;
     }
 
@@ -23,10 +24,12 @@
     }
 
     button {
+        margin: 10px;
     	margin-left: 10px;
     }
 
     .date-picker-wrapper {
+        margin: 10px;
         position: relative;
         .over {
             position: absolute;
@@ -49,7 +52,7 @@
     background: #ffffff;
     box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
     padding: 5px;
-    position: fixed;
+    position: absolute;
     margin-left: 20px;
     z-index: 1;
 
