--- a/code/dev/less/shared/filter-generator.less
+++ b/code/dev/less/shared/filter-generator.less
@@ -15,7 +15,7 @@
     select {
         max-width: 150px;
     	margin: 10px;
-    	margin-right: 5px;
+    	margin-right: 0;
     }
 
     .remove-active-filter {
