--- a/code/widgets/adf-widget-analytics-proxy-traffic/src/views/view-http-https-chart.tpl.html
+++ b/code/widgets/adf-widget-analytics-proxy-traffic/src/views/view-http-https-chart.tpl.html
@@ -1,4 +1,5 @@
 <div class="col-lg-12">
   <h4>{{config.domain.domain_name}}</h4>
-  <div http-https-chart fl-os="config.os.labels" fl-device="config.device.labels" fl-country="config.countries" ng-domain="config.domain"></div>
+  <div class="row" ng-include="'{widgetsPath}/analytics-proxy-traffic/src/views/parts/panel-filter-settings.tpl.html'" ></div>
+  <div http-https-chart filters-sets="config.filters" ng-domain="config.domain"></div>
 </div>
