--- a/code/widgets/adf-widget-analytics-proxy-traffic/src/views/view-requests-chart.tpl.html
+++ b/code/widgets/adf-widget-analytics-proxy-traffic/src/views/view-requests-chart.tpl.html
@@ -1,9 +1,5 @@
 <div class="col-lg-12 view-requests-chart">
   <h4>{{config.domain.domain_name}}</h4>
-  <div class="row">
-    <div class="col-md-12 view-requests-chart_filter_settings">
-
-    </div>
-  </div>
-  <div requests-chart filters="config.filters" fl-os="config.os.labels" fl-device="config.device.labels" fl-country="config.countries" ng-domain="config.domain"></div>
+  <div class="row" ng-include="'{widgetsPath}/analytics-proxy-traffic/src/views/parts/panel-filter-settings.tpl.html'"></div>
+  <div requests-chart filters-sets="config.filters" ng-domain="config.domain"></div>
 </div>
