save build with changes

--- a/code/css/styles.css
+++ b/code/css/styles.css
@@ -489,3 +489,9 @@ polyline {
 .fg-add-filter-menu .dd-element:hover {
   background: #f5f5f5;
 }
+.widget {
+  width: 100%;
+}
+.widget .filter-time-period {
+  display: none;
+}
