--- a/code/widgets/adf-widget-analytics-proxy-traffic/src/views/view-proxy-traffic-chart.tpl.html
+++ b/code/widgets/adf-widget-analytics-proxy-traffic/src/views/view-proxy-traffic-chart.tpl.html
@@ -1,5 +1,3 @@
 <div class="col-lg-12">
-  <h4>{{config.domain.domain_name}}</h4>
-  <div class="row" ng-include="'{widgetsPath}/analytics-proxy-traffic/src/views/parts/panel-filter-settings.tpl.html'"></div>
-  <div proxy-traffic-chart status-codes="statusCode.labels" fl-os="config.os.labels" fl-device="config.device.labels" fl-country="config.countries" ng-domain="config.domain"></div>
+  <div proxy-traffic-chart filters-sets="config.filters" status-codes="config.statusCode.labels" ng-domain="config.domain"></div>
 </div>
