--- a/code/widgets/adf-widget-analytics-proxy-traffic/src/views/view-requests-chart.tpl.html
+++ b/code/widgets/adf-widget-analytics-proxy-traffic/src/views/view-requests-chart.tpl.html
@@ -1,5 +1,3 @@
-<div class="col-lg-12 view-requests-chart">
-  <h4>{{config.domain.domain_name}}</h4>
-  <div class="row" ng-include="'{widgetsPath}/analytics-proxy-traffic/src/views/parts/panel-filter-settings.tpl.html'"></div>
+<div class="col-lg-12">
   <div requests-chart filters-sets="config.filters" ng-domain="config.domain"></div>
 </div>
