Change the directive dashboard-nav-menu

--- a/code/dev/less/dashboards.less
+++ b/code/dev/less/dashboards.less
@@ -1,9 +1,12 @@
-ul.dashboard_menu {
-  list-style-type: none;
-  margin: 0;
-  padding-left: 10px;
-  color: @app-side-menu-text-color;
-  a{
+section[drawer] .side-menu .dashboard_menu .side-menu-item.item-title {
+  a {
     color: @app-side-menu-text-color;
+  }
+}
+
+// button size into dashboard title
+.dashboard__title {
+  .btn-link {
+    font-size: 30px;
   }
 }
