--- a/code/dev/css/styles.css
+++ b/code/dev/css/styles.css
@@ -153,6 +153,9 @@ select.form-control.fixed {
 select.form-control.fixed135 {
   width: 135px;
 }
+select.form-control.fixed175 {
+  width: 175px;
+}
 input.form-control {
   max-width: 550px;
 }
