--- a/code/dev/less/page.less
+++ b/code/dev/less/page.less
@@ -156,6 +156,9 @@ select.form-control.fixed135 {
   width: 135px;
 }
 
+select.form-control.fixed175 {
+  width: 175px;
+}
 input.form-control {
   max-width: 550px;
 }
