--- a/code/dev/less/page.less
+++ b/code/dev/less/page.less
@@ -155,10 +155,13 @@ select.form-control.fixed {
 select.form-control.fixed135 {
   width: 135px;
 }
-
+select.form-control.fixed155 {
+  width: 155px;
+}
 select.form-control.fixed175 {
   width: 175px;
 }
+
 input.form-control {
   max-width: 550px;
 }
