--- a/code/dev/less/widget.less
+++ b/code/dev/less/widget.less
@@ -7,3 +7,15 @@
     display: none;
   }
 }
+
+// change  columns width for modal window "Add new widget"
+ @media (min-width: 768px){
+.dl-horizontal dt{
+  width: 250px;
+}
+.dl-horizontal dd {
+  margin-left: 260px;
+}
+
+ }
+
