--- a/code/dev/less/dashboards.less
+++ b/code/dev/less/dashboards.less
@@ -7,6 +7,9 @@ section[drawer] .side-menu .dashboard_menu .side-menu-item.item-title {
 // button size into dashboard title
 .dashboard__title {
   .btn-link {
-    font-size: 30px;
+    font-size: 28px;
+    padding-left: 3px;
+    padding-right: 3px;
+    padding-top: 10px;
   }
 }
