--- a/code/widgets/adf-widget-analytics-proxy-traffic/src/views/view-requests-chart.tpl.html
+++ b/code/widgets/adf-widget-analytics-proxy-traffic/src/views/view-requests-chart.tpl.html
@@ -1,3 +1,6 @@
 <div class="col-lg-12">
-  <div requests-chart filters-sets="config.filters" ng-domain="config.domain"></div>
+  <div class="alert alert-info" ng-if="!config.domain">
+    Please click on <i class="glyphicon glyphicon-cog"></i> icon to configure the widget
+  </div>
+  <div ng-if="config.domain" requests-chart filters-sets="config.filters" ng-domain="config.domain"></div>
 </div>
