--- a/code/dev/css/styles.css
+++ b/code/dev/css/styles.css
@@ -608,6 +608,9 @@ section[drawer] .side-menu .dashboard_menu .side-menu-item.item-title a {
 .domain-caching-rules .table-headers-info tr > th {
   text-align: center;
 }
+.domain-caching-rules .table-headers-info .table-title--operation {
+  width: 120px;
+}
 .caching-rules-list .panel-buttons-left {
   padding-right: 20px;
 }
