--- a/code/dev/css/styles.css
+++ b/code/dev/css/styles.css
@@ -611,6 +611,10 @@ section[drawer] .side-menu .dashboard_menu .side-menu-item.item-title a {
 .domain-caching-rules .table-headers-info .table-title--operation {
   width: 120px;
 }
+.domain-caching-rules .ui-select-container input::-webkit-input-placeholder,
+.domain-caching-rules .ui-select-container .ui-select-search {
+  min-width: 200px;
+}
 .caching-rules-list .panel-buttons-left {
   padding-right: 20px;
 }
