Pace, tooltips, "No Data To Display" centered commit

--- a/code/dev/css/styles.css
+++ b/code/dev/css/styles.css
@@ -690,3 +690,16 @@ i {
 .icon-revapm-banknote:before {
   content: "\e912";
 }
+h2 {
+  color: black;
+  font-family: Calibri;
+  font-weight: lighter;
+}
+h2 {
+  color: black;
+  font-family: Calibri;
+
+
+
+  font-weight: lighter;
+}
