--- a/code/dev/less/sidebar.less
+++ b/code/dev/less/sidebar.less
@@ -14,6 +14,9 @@ section[drawer] {
     }
   }
   .side-menu {
+    height: 700px;
+    overflow: visible;
+    position: relative;
     .side-menu-item {
       cursor: pointer;
       display: block;
