--- a/code/dev/css/styles.css
+++ b/code/dev/css/styles.css
@@ -697,3 +697,123 @@ i {
 .icon-revapm-banknote:before {
   content: "\e912";
 }
+.billing-plan {
+  border: solid 1px;
+  border-color: #F8A543;
+  margin: 5px;
+  border-radius: 3px;
+}
+.billing-plan.current {
+  margin-top: -20px;
+}
+.billing-plan-header {
+  color: #FFEBCD;
+  background-color: #F8A543;
+  padding: 10px;
+}
+.billing-plan-ammount {
+  color: green;
+}
+.billing-plan-action {
+  padding-bottom: 20px;
+}
+
+
+.control-group.warning .control-label,.control-group.warning .help-block,.control-group.warning .help-inline{color:#c09853;}
+.control-group.warning .checkbox,.control-group.warning .radio,.control-group.warning input,.control-group.warning select,.control-group.warning textarea{color:#c09853;}
+.control-group.warning input,.control-group.warning select,.control-group.warning textarea{border-color:#c09853;-webkit-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.075);-moz-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.075);box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.075);}.control-group.warning input:focus,.control-group.warning select:focus,.control-group.warning textarea:focus{border-color:#a47e3c;-webkit-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.075),0 0 6px #dbc59e;-moz-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.075),0 0 6px #dbc59e;box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.075),0 0 6px #dbc59e;}
+.control-group.warning .input-prepend .add-on,.control-group.warning .input-append .add-on{color:#c09853;background-color:#fcf8e3;border-color:#c09853;}
+.control-group.error .control-label,.control-group.error .help-block,.control-group.error .help-inline{color:#b94a48;}
+.control-group.error .checkbox,.control-group.error .radio,.control-group.error input,.control-group.error select,.control-group.error textarea{color:#b94a48;}
+.control-group.error input,.control-group.error select,.control-group.error textarea{border-color:#b94a48;-webkit-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.075);-moz-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.075);box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.075);}.control-group.error input:focus,.control-group.error select:focus,.control-group.error textarea:focus{border-color:#953b39;-webkit-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.075),0 0 6px #d59392;-moz-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.075),0 0 6px #d59392;box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.075),0 0 6px #d59392;}
+.control-group.error .input-prepend .add-on,.control-group.error .input-append .add-on{color:#b94a48;background-color:#f2dede;border-color:#b94a48;}
+.control-group.success .control-label,.control-group.success .help-block,.control-group.success .help-inline{color:#468847;}
+.control-group.success .checkbox,.control-group.success .radio,.control-group.success input,.control-group.success select,.control-group.success textarea{color:#468847;}
+.control-group.success input,.control-group.success select,.control-group.success textarea{border-color:#468847;-webkit-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.075);-moz-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.075);box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.075);}.control-group.success input:focus,.control-group.success select:focus,.control-group.success textarea:focus{border-color:#356635;-webkit-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.075),0 0 6px #7aba7b;-moz-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.075),0 0 6px #7aba7b;box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.075),0 0 6px #7aba7b;}
+.control-group.success .input-prepend .add-on,.control-group.success .input-append .add-on{color:#468847;background-color:#dff0d8;border-color:#468847;}
+.control-group.info .control-label,.control-group.info .help-block,.control-group.info .help-inline{color:#3a87ad;}
+.control-group.info .checkbox,.control-group.info .radio,.control-group.info input,.control-group.info select,.control-group.info textarea{color:#3a87ad;}
+.control-group.info input,.control-group.info select,.control-group.info textarea{border-color:#3a87ad;-webkit-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.075);-moz-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.075);box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.075);}.control-group.info input:focus,.control-group.info select:focus,.control-group.info textarea:focus{border-color:#2d6987;-webkit-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.075),0 0 6px #7ab5d3;-moz-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.075),0 0 6px #7ab5d3;box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.075),0 0 6px #7ab5d3;}
+.control-group.info .input-prepend .add-on,.control-group.info .input-append .add-on{color:#3a87ad;background-color:#d9edf7;border-color:#3a87ad;}
+input:focus:invalid,textarea:focus:invalid,select:focus:invalid{color:#b94a48;border-color:#ee5f5b;}input:focus:invalid:focus,textarea:focus:invalid:focus,select:focus:invalid:focus{border-color:#e9322d;-webkit-box-shadow:0 0 6px #f8b9b7;-moz-box-shadow:0 0 6px #f8b9b7;box-shadow:0 0 6px #f8b9b7;}
+
+
+#container {
+  padding: 0;
+  margin: 0;
+  background-color: #292929;
+  width: 1200px;
+  margin: 0 auto;
+  min-height: 100%;
+}
+span {
+  color: red;
+}
+h1,h2,h3,h4,h5,h6{
+
+  font-family: 'Roboto Slab', serif;
+
+  font-family: 'Roboto', sans-serif;
+
+  font-family: 'Open Sans', sans-serif;
+
+  font-family: 'Slabo 27px', serif;
+
+  font-family: 'Lato', sans-serif;
+
+  font-family: 'Oswald', sans-serif;
+
+  font-family: 'Roboto Condensed', sans-serif;
+
+  font-family: 'Montserrat', sans-serif;
+
+  font-family: 'Source Sans Pro', sans-serif;
+
+  font-family: 'Lora', serif;
+
+  font-family: 'Raleway', sans-serif;
+
+  font-family: 'PT Sans', sans-serif;
+
+  font-family: 'Droid Sans', sans-serif;
+
+  font-family: 'Open Sans Condensed', sans-serif;
+
+  font-family: 'Ubuntu', sans-serif;
+
+  font-family: 'Titillium Web', sans-serif;
+
+  font-family: 'Noto Sans', sans-serif;
+
+  font-family: 'PT Sans Narrow', sans-serif;
+
+  font-family: 'Merriweather', serif;
+
+  font-family: 'Fjalla One', sans-serif;
+
+  font-family: 'PT Serif', serif;
+
+  font-family: 'Alegreya Sans', sans-serif;
+
+}
+
+.billing-plan {
+  border: solid 1px;
+  border-color: #F8A543;
+  margin: 5px;
+  border-radius: 3px;
+}
+.billing-plan.current {
+  margin-top: -20px;
+}
+.billing-plan-header {
+  color: #FFEBCD;
+  background-color: #F8A543;
+  padding: 10px;
+}
+.billing-plan-ammount {
+  color: green;
+}
+.billing-plan-action {
+  padding-bottom: 20px;
+}
