--- a/code/css/styles.css
+++ b/code/css/styles.css
@@ -689,6 +689,46 @@ i {
 .icon-revapm-banknote:before {
   content: "\e912";
 }
+.billing-plan {
+  border: solid 1px;
+  border-color: #F8A543;
+  margin: 5px;
+  border-radius: 3px;
+}
+.billing-plan.current {
+  margin-top: -20px;
+}
+.billing-plan-header {
+  color: #FFEBCD;
+  background-color: #F8A543;
+  padding: 10px;
+}
+.billing-plan-ammount {
+  color: green;
+}
+.billing-plan-action {
+  padding-bottom: 20px;
+}
+.billing-plan {
+  border: solid 1px;
+  border-color: #F8A543;
+  margin: 5px;
+  border-radius: 3px;
+}
+.billing-plan.current {
+  margin-top: -20px;
+}
+.billing-plan-header {
+  color: #FFEBCD;
+  background-color: #F8A543;
+  padding: 10px;
+}
+.billing-plan-ammount {
+  color: green;
+}
+.billing-plan-action {
+  padding-bottom: 20px;
+}
 
 .pace {
   -webkit-pointer-events: none;
