--- a/code/dev/css/styles.css
+++ b/code/dev/css/styles.css
@@ -195,7 +195,7 @@ h1.signup {
   color: #A1A2A5;
 }
 alert-list {
-  position: absolute;
+  position: fixed;
   z-index: 999;
   left: 50%;
   top: 70px;
@@ -296,12 +296,6 @@ input[type="checkbox"] {
 .logo img {
   width: 100%;
   height: 100%;
-}
-.alert-absolute {
-  position: absolute;
-  top: 100px;
-  width: 40%;
-  left: 30%;
 }
 #drawer {
   z-index: 999;
