--- a/code/dev/css/styles.css
+++ b/code/dev/css/styles.css
@@ -705,3 +705,7 @@ i {
 .billing-plan-details {
   margin: 0 20px;
 }
+.subscribe-contact-info-terms {
+  margin: -10px 0 0 47px;
+  font-weight: bold;
+}
