Update Summary information

--- a/code/dev/less/subscription-summary.less
+++ b/code/dev/less/subscription-summary.less
@@ -3,8 +3,8 @@
     display: table-row;
   }
   .stats-data {
-    font-weight: 600;
-    text-align: center;
+    // font-weight: 600;
+    // text-align: center;
   }
   .col-sm {
     display: table-cell;
