--- a/code/dev/less/page.less
+++ b/code/dev/less/page.less
@@ -186,6 +186,33 @@ input.form-control {
   z-index: 999;
 }
 
+/*simple glyph animation*/
+.glyphicon-spin {
+    -webkit-animation: spin 500ms infinite linear;
+    animation: spin 500ms infinite linear;
+}
+
+@-webkit-keyframes spin {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(359deg);
+        transform: rotate(359deg);
+    }
+}
+
+@keyframes spin {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(359deg);
+        transform: rotate(359deg);
+    }
+}
 
 table tbody tr td {
   max-width: 300px;
