--- a/code/dev/less/page.less
+++ b/code/dev/less/page.less
@@ -204,7 +204,7 @@ h1.signup {
 }
 
 alert-list {
-  position: absolute;
+  position: fixed;
   z-index: 999;
   left: 50%;
   top: 70px;
@@ -236,4 +236,25 @@ input[type="checkbox"]{
 
 .section-edit-company{
   padding-bottom: 30px;
+}
+.border12 {
+  border: solid #97989B;
+  padding: 16px;
+  border-width: thin;
+  border-radius: 10px;
+  margin: 10px 10px 50px 10px;
+
+}
+.headerh3 {
+  color: #F7941E;
+  background: white;
+
+}
+.buttonpanel {
+  margin-top: -35px;
+  margin-right: 35px;
+  background: white;
+}
+.container1 {
+  margin-top: 25px;
 }
