--- a/code/dev/css/styles.css
+++ b/code/dev/css/styles.css
@@ -195,7 +195,7 @@ h1.signup {
   color: #A1A2A5;
 }
 alert-list {
-  position: absolute;
+  position: fixed;
   z-index: 999;
   left: 50%;
   top: 70px;
@@ -221,6 +221,25 @@ input[type="checkbox"] {
 }
 .section-edit-company {
   padding-bottom: 30px;
+}
+.border12 {
+  border: solid #97989B;
+  padding: 16px;
+  border-width: thin;
+  border-radius: 10px;
+  margin: 10px 10px 50px 10px;
+}
+.headerh3 {
+  color: #F7941E;
+  background: white;
+}
+.buttonpanel {
+  margin-top: -35px;
+  margin-right: 35px;
+  background: white;
+}
+.container1 {
+  margin-top: 25px;
 }
 .main_img_container {
   left: 50%;
@@ -296,12 +315,6 @@ input[type="checkbox"] {
 .logo img {
   width: 100%;
   height: 100%;
-}
-.alert-absolute {
-  position: absolute;
-  top: 100px;
-  width: 40%;
-  left: 30%;
 }
 #drawer {
   z-index: 999;
@@ -712,4 +725,49 @@ i {
 }
 .billing-plan-action {
   padding-bottom: 20px;
+}
+.billing-plan-details {
+  margin: 0 20px;
+}
+.billing-plan-description {
+  min-height: 170px;
+}
+@media (max-width: 480px) {
+  .billing-plan-description {
+    min-height: 50px;
+  }
+}
+@media (min-width: 768px) {
+  .billing-plan-description {
+    min-height: 50px;
+  }
+}
+@media (min-width: 992px) {
+  .billing-plan-description {
+    min-height: 260px;
+  }
+}
+@media (min-width: 1200px) {
+  .billing-plan-description {
+    min-height: 140px;
+  }
+}
+.subscribe-contact-info-terms {
+  margin: -10px 0 0 47px;
+  font-weight: bold;
+}
+.subscription-summary .stats-highlights-table-row {
+  display: table-row;
+}
+.subscription-summary .col-sm {
+  display: table-cell;
+  padding-left: 7%;
+}
+.subscription-summary .stats-heading {
+  margin-bottom: 9px;
+  padding: 0;
+  border-bottom: none;
+  color: #888;
+  font-weight: bold;
+  font-size: 1.16667em;
 }
