Open RevAPM website https://www.revapm.com/ in a separate window

--- a/code/css/styles.css
+++ b/code/css/styles.css
@@ -316,6 +316,7 @@ section[drawer] {
 section[drawer] #logo {
   background-color: #606363;
   height: 52px;
+  background: transparent;
 }
 section[drawer] #logo img {
   margin: 8px 5px;
