--- a/code/dev/less/sidebar.less
+++ b/code/dev/less/sidebar.less
@@ -7,6 +7,7 @@ section[drawer] {
   #logo {
     background-color: @app-side-menu-background-logo;
     height: @app-top-menu-height;
+    background: transparent;
     img {
       margin: 8px 5px;
       vertical-align: middle;
