Add “Account” column to Users list

--- a/code/dev/less/page.less
+++ b/code/dev/less/page.less
@@ -131,6 +131,11 @@ table {
         margin-right: 10px;
       }
     }
+    .company-names {
+      white-space: normal;
+      word-break: break-word;
+      max-height: 50px;
+    }
   }
 }
 
@@ -258,5 +263,4 @@ textarea {
 
 .text--courier {
   font-family: Courier;
-
 }
