--- a/code/dev/css/styles.css
+++ b/code/dev/css/styles.css
@@ -137,6 +137,11 @@ table tbody tr.loadingth {
 table tbody .actions a {
   margin-right: 10px;
 }
+table tbody .company-names {
+  white-space: normal;
+  word-break: break-word;
+  max-height: 50px;
+}
 .ui-select-multiple.ui-select-bootstrap,
 input.ui-select-search {
   max-width: 550px;
