--- a/code/dev/less/page.less
+++ b/code/dev/less/page.less
@@ -131,7 +131,7 @@ table {
         margin-right: 10px;
       }
     }
-    .company-names {
+    .company-names,.source-name {
       white-space: normal;
       word-break: break-word;
       max-height: 50px;
