--- a/code/dev/css/styles.css
+++ b/code/dev/css/styles.css
@@ -137,6 +137,9 @@ table tbody tr.loadingth {
 table tbody .actions a {
   margin-right: 10px;
 }
+table tbody .actions .not-active {
+  opacity: 0.65;
+}
 table tbody .company-names,
 table tbody .source-name {
   white-space: normal;
