--- a/code/dev/less/page.less
+++ b/code/dev/less/page.less
@@ -130,8 +130,12 @@ table {
       a {
         margin-right: 10px;
       }
+      .not-active {
+        opacity: 0.65;
+      }
     }
-    .company-names,.source-name {
+    .company-names,
+    .source-name {
       white-space: normal;
       word-break: break-word;
       max-height: 50px;
